Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112957

Toplevel developer build fails to link: undefined symbol: vtable for QNetworkAccessDebugPipeBackendFactory

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • dev
    • Network
    • None
    • Android, Linux/X11
    • 409469ba1 (dev), bc948965f (6.6), c97361e0d (6.5), c1d235685 (dev), 17efffe1a (dev), 4d86ca8c4 (dev), 279939170 (dev), 65e04162d (dev), 43326b380 (6.6), 010ab170c (6.6), 238e18e38 (6.6), 086a22c4f (6.6), bb66e67b6 (6.6), d1a17d965 (dev), c75eadf08 (6.6)

    Description

      Building for Android API version 27 works (cross compiling on Linux), unless -developer-build is requested.

      If configured with -developer-build, the linker fails with
      ld: error: undefined symbol: vtable for QNetworkAccessDebugPipeBackendFactory

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              alexandru.croitor Alexandru Croitor
              axelspoerl Axel Spoerl
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes